--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,14 +3,18 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
+@inproceedings{Canella2019extended,
+  title = {{A Systematic Evaluation of Transient Execution Attacks and Defenses}},
+  author = {Canella, Claudio and Van Bulck, Jo and Schwarz, Michael and Lipp, Moritz and von Berg, Benjamin and Ortner, Philipp and Piessens, Frank and Evtyushkin, Dmitry and Gruss, Daniel},
+  booktitle = {USENIX Security Symposium},
+  year = {2019},
+  note = {extended classification tree at https://transient.fail/},
+  selected={true},
+  abbr={USENIX},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
-}
+  html={https://www.usenix.org/system/files/sec19-canella.pdf},
+  pdf={transient.pdf}
+ }
 
 @article{einstein1950meaning,
   abbr={AJP},
@@ -44,7 +48,7 @@
   pdf={example_pdf.pdf},
   altmetric={248277},
   dimensions={true},
-  selected={true}
+  selected={false}
 }
 
 @article{einstein1905molekularkinetischen,
